# pachtop

./: .eslintrc  .eslintrc.js  .gitignore  .pnp.cjs  .yarnrc.yml  CHANGELOG.md  ExcludeProcess.cmd  LICENSE  README.md  TODO.md  cn  concepts.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1682808847880.mjs  vite.config.ts.timestamp-1716592505534-84744dfa755a.mjs
.github/: FUNDING.yml
.github/actions/yarn-nm-install/: action.yml
.github/workflows/: cleanup-cache.yml  publish.yml  release-cn.yaml  release-master.yaml  release-master.yml  release.yml  test-build.yml  test.yml  update-server-release.yml
.yarn/releases/: yarn-3.8.2.cjs
assets/icons/macos/: AppIcon.icns
assets/macos/: AppIcon.icns
src/: App.tsx  contants.ts  global-types.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  log4rs.yaml  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json  migrated.json  store.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  app.rs  commands.rs  lib.rs  logger.rs  main.rs  metrics.rs  models.rs  plugins.rs  sqlite.rs  tray.rs  tree.rs  utils.rs
src-tauri/src/db/: db.rs
src-tauri/src/dirstat/: disk.rs  ffi.rs  mod.rs
src-tauri/src/mac/: window.rs
src-tauri/src/win/: window.rs
src-tauri/ws-systemicons/: Cargo.toml
src-tauri/ws-systemicons-a/src/: lib.rs
src-tauri/ws-systemicons-a/src/linux/: mod.rs
src-tauri/ws-systemicons/src/linux/: mod.rs  request.rs
src-tauri/ws-systemicons/src/macos/: request.rs
src-tauri/ws-systemicons/src/windows/: mod.rs  request.rs
src/api/: client.ts  index.ts  types.ts
src/components/: are-chart.prototype.tsx  area-chart-apex.tsx  area-chart.prototype.tsx  area-chart.tsx  bar-chart.tsx  card.tsx  dashboard-section-divider.tsx  dynamic-progress.tsx  ellipsis.tsx  exclusion-modal.tsx  gradient-radial-chart.tsx  page-wrapper.tsx  pie-chart.tsx  radial-chart.tsx  single-bar-chart.tsx  spline-chart.tsx  stats-ring.tsx  stats-ring2.tsx  system-info.tsx  system-information-widget.tsx  treemap-chart.tsx
src/features/RAM/components/: ram-used-chart.tsx
src/features/metrics/components/: cpus-bar-chart.tsx  global-cpu-chart.tsx  memory-chart.tsx  memory-radial-chart.tsx  networks-chart.tsx  swap-chart.tsx  swap-radial-chart.tsx  system-info.tsx
src/features/metrics/components/cpus/: cpus.bar-chart.tsx  cpus.bar-charts.tsx
src/features/metrics/components/disks/: disk.area-chart.prototype.tsx  disk.area-chart.tsx  disk.directory-treeview.tsx  disk.info.tsx  disk.information-analytcs.tsx  disk.information-analytics.tsx  disk.notfound.tsx  disk.stats-ring.tsx  disks.area-chart.tsx  removable-icon.tsx
src/features/metrics/components/global-cpu/: global-cpu.area-chart.tsx  global-cpu.stats-ring.tsx
src/features/metrics/components/memory/: memory-area-chart.tsx  (+5 more)
src/features/metrics/contexts/: metrics-context.tsx
src/features/metrics/hooks/: useKillProcess.tsx  useMetricsContext.tsx  useRequestCpus.tsx  useRequestDisks.tsx  useRequestMetrics.tsx  useRequestNetworks.tsx  useRequestProcesses.tsx
src/features/metrics/pages/: dashboard.page.tsx  disk-analytics.page.tsx  disks.page.tsx  processes.page.tsx  styles.css
src/features/metrics/signals/: create-metrics-signal.ts  create-network-signal.ts  index.ts  requestMetrics.ts  state.ts  useSignalMetrics.tsx
src/features/metrics/stores/: cpus.store.ts  disk.store.ts  enumerable-metrics.store.ts  global-cpu.store.ts  memory.store.ts  metrics.store.ts  networks.store.ts  swap.store.ts  system.store.ts
src/features/metrics/styles/: disk-treeview.css
src/features/metrics/utils/: format-bytes.ts  format-overall-stats.ts  format-seconds-time.ts  format-stats.ts  from-number-to-percentage-string.ts  types.ts
src/features/preferences/stores/: preferences.store.ts
src/features/processes/components/: processes.comparator.tsx  processes.comparitor.tsx  processes.insights.tsx  processes.kill-verification.tsx  processes.table.tsx  processes.tables.tsx  processes.timeline-chart.tsx
src/features/processes/hooks/: useKillProcess.tsx  useProcesses.tsx
src/features/processes/pages/: processes-revamp.page.tsx  processes.page.tsx
src/features/processes/redux/: processes.slice.ts
src/features/processes/stores/: processes-comparator.store.ts  processes-enumerable.store.ts  processes.store.ts
src/features/processes/styles/: ag-grid-theme-midnight.css  ag-grid-theme-slate.css
src/features/settings/mdx/: about.mdx
src/features/settings/pages/: settings.page.tsx
src/features/settings/views/: about.view.tsx  autostart.view.tsx  general.view.tsx
src/features/storage/pages/: storage.page.tsx
src/hooks/: useEffectAsync.tsx  useGetMetrics.tsx  useGetSysinfo.tsx  useIsFirstRun.tsx  useLimitedArray.tsx  useMediaQuery.tsx  usePlatform.tsx  useRandomGreeting.tsx  useRequestMetrics.tsx  useRouteHandler.tsx  useServerEventsContext.tsx  useServerEventsEnumerableStore.tsx  useServerEventsStore.tsx  useSettings.tsx  useTheme.tsx
src/layout/: index.tsx
src/layout/components/: footer.tsx  header.tsx  navbar-footer.tsx  navbar-logo.tsx  navbar-options.tsx  navbar.tsx  navigation-history.tsx
src/lib/: autostart.ts  commands.ts  config.ts  events.ts  helpers.ts  index.ts  logger.ts  store.ts  types.ts
src/lib/bindings/: Cpu.ts  Disk.ts  DiskAnalysisProgress.ts  DiskItem.ts  DiskItemMetadata.ts  DiskScanInput.ts  FileEntry.ts  GlobalCpu.ts  Memory.ts  Network.ts  Process.ts  ProcessDiskUsage.ts  Swap.ts  SysInfo.ts  Timestamp.ts
src/pages/: dashboard.page.tsx  home.page.tsx
src/providers/: analytics.provider.tsx  app.provider.tsx  index.tsx  notifications.provider.tsx  platform.provider.tsx  redux.provider.tsx  server-events.context.tsx  server-events.provider.tsx  settings.provider.tsx  theme.provider.tsx  user.provider.tsx
src/routes/: index.tsx
src/utils/: create-selectors.ts  has-text-changed.ts  index.ts  notification.ts  notification.tsx
update-server/: Dockerfile  docker-compose.yml  environment.yml  helpers.py  main.py  requirements.txt  runtime.txt
(+9 files in other folders)
