[package]
name = "pachtop"
version = "1.1.0"
description = "a more modern system monitor"
authors = ["Pacholo Amit"]
license = "MIT"
repository = "https://github.com/pacholoamit/pachtop"
edition = "2021"
rust-version = "1.78"

[workspace]

members = [
  "ws-systemicons"
]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
systemicons = { path = "./ws-systemicons" }
chrono = { version = "0.4.23", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.2", features = ["tray-icon", "devtools"] }
sysinfo = "0.30.12"


log = "^0.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
ts-rs = "8.1"
hex_color = "3.0.0"
rayon = "1.10.0"
fs_extra = "1.3.0"
base64 = "0.22.1"
# surrealdb = { version = "1.5.2", features = ["kv-speedb"] }
anyhow = "1.0.86"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
  "Win32_Graphics_Dwm",
  "Win32_Foundation",
  "Win32_UI_Controls",
] }
winver = "1"
winapi-util = "0.1.8"
[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.7"
features = ["winerror"]

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]



[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
