[package]
name = "systemicons"
version = "0.6.0"
description = "With this lib you can retrive the system icon which is associated to a certain file extension. The icon will be in the .png format. Windows, macOS and Linux (GTK) are supported."
authors = [
    "Uwe Riegel <uriegel@hotmail.de>",
    "Victor Aremu <victor.olorunbumi@gmail.com>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/uriegel/systemicons"
readme = "README.md"

[target.'cfg(target_os="linux")'.dependencies]
gio-sys = "0.18"
glib = "0.18"
glib-sys = "0.18"
gtk-sys = "0.18"
gtk = "0.18"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winit = "0.25"
image = "0.23"

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.24.0"
objc = "0.2.7"

[dev-dependencies]
tokio = { version = "1.8", features = ["full"] }
warp = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
